vlib/v/checker/tests/struct_ptr_cast_zero_err.vv
struct Context {}

_ = &Context(0)
